shorter period / modal scrollbar fix

--- a/resources/css/global.scss
+++ b/resources/css/global.scss
@@ -52,17 +52,16 @@ body {
     font-size: 0.938rem;
     height: 100%;
     &.backdrop-no-scroll,
-    &.no-scroll {
-        /*position: fixed;*/
+    &.no-scroll,
+    &.no-scrollbar {
         position: absolute;
         inset: 0;
         overflow: hidden;
-        &bar {
-            /*position: fixed;*/
-            position: absolute;
-            inset: 0;
-            overflow: hidden;
-            inset-inline-end: 17px;
+    }
+    &.no-scrollbar {
+        inset-inline-end: 17px;
+        &>#topbar {
+            width: calc(100% - 17px);
         }
     }
     @media (min-width: 768px) {
@@ -708,7 +707,7 @@ h6 {
     }
     @media (min-width: 768px) {
         min-height: 60px;
-        position: sticky;
+        position: fixed;
         top: 0;
         &>.nav-menu {
             margin-right: 1rem;
