--- a/resources/css/modal.scss
+++ b/resources/css/modal.scss
@@ -48,7 +48,7 @@
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
         background-color: rgb(0, 0, 0);
-        background-color: rgba(0, 0, 0, 0.35);
+        background-color: var(--faded);
         text-align: center;
         &:before {
             content: "";
